# Hacknarok_siema_chlopy

./: README.md
Server/: CMakeLists.txt  DataBase.cpp  Socket.cpp  index.html  main.cpp  package-lock.json  server.js
software/: ServerCon.h  ServerCon.ino  config.h  config.ino  motor.h  motor.ino  program.h  program.ino  sensors.h  sensors.ino  software.ino  web.h  web.ino
test/: test_odleglosc.ino
test/WiFiServer/: WiFiServer.ino
test/dht/: dht.ino
test/display/: display.ino
test/i2c/: i2c.ino
test/topologia_kolejki/: topologia_kolejki.ino
